moved syntax highlighting changes to our config file so we can use stock .properties files

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -212,3 +212,39 @@ import syntax/tex
 import syntax/vb
 import syntax/verilog
 import syntax/vhdl
+
+## custom syntax config
+
+# remove bold highlighting
+style.cpp.5=$(colour.keyword)
+style.cpp.10=$(colour.operator)
+
+indent.maintain.$(file.patterns.lua)=0
+block.start.$(file.patterns.lua)=5 function do then else while for
+block.end.$(file.patterns.lua)=5 end else elseif
+
+file.patterns.matlab=*.m
+block.start.$(file.patterns.matlab)=4 function if elseif else while for switch case try catch
+block.end.$(file.patterns.matlab)=4 end else elseif case
+# remove bold highlighting
+style.matlab.4=$(colour.keyword)
+style.matlab.6=$(colour.operator)
+
+# remove bold highlighting
+style.verilog.5=$(colour.keyword)
+style.verilog.10=fore:#007070
+
+style.python.1=$(colour.code.comment.line),$(font.code.comment.line)
+style.python.2=$(colour.number)
+style.python.3=$(colour.string)
+style.python.4=$(colour.string)
+style.python.5=$(colour.keyword)
+style.python.6=$(colour.code.comment.box),$(font.code.comment.box),back:#D0F0F0,eolfilled
+style.python.8=
+style.python.9=
+style.python.10=$(colour.operator)
+style.python.12=$(colour.code.comment.box),$(font.code.comment.box),back:#D0F0F0,eolfilled
+
+#style.tex.0=fore:#7F7F00 or was it #3F3F3F???
+command.compile.$(file.patterns.latex)=pdflatex -file-line-error --interaction=nonstopmode $(FileNameExt)
+command.build.$(file.patterns.latex)=pdflatex -output-format pdf -file-line-error --interaction=nonstopmode $(FileNameExt)
