make spellcheck work on linux; add generic autocomplete

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -45,6 +45,9 @@ Block comment: C-q, Spell check: F9, Navigate: C-<, C->
 # hide bookmark/selection margin
 margin.width=0
 
+# show line numbers
+line.margin.visible=1
+
 # selection was too dark
 if PLAT_WINNT
  selection.alpha=60
