paths for windows and linux

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -5,8 +5,12 @@
 # Indentation for if blocks can only be one space (or one tab) for GTK
 #  on Windows, still seems to work with two spaces
 
-ext.lua.startup.script=$(SciteDefaultHome)\extman.lua
-ext.lua.directory=D:\home\Code\scite\scite_lua
+if PLAT_WIN
+ ext.lua.startup.script=$(SciteDefaultHome)\extman.lua
+ ext.lua.directory=D:\home\Code\scite\scite_lua
+if PLAT_GTK
+ ext.lua.startup.script=$(SciteDefaultHome)/extman.lua
+ ext.lua.directory=$(SciteDefaultHome)/scite_lua
 #spawner.extension.path=$(SciteDefaultHome)
 
 # window position
