don't use find strip on linux - can't close it

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -20,10 +20,15 @@ if PLAT_WIN
 position.width=800
 position.height=992
 
-# use strip instead of dialog for find
-find.use.strip=1
+# use strip instead of dialog for find on Windows; strip doesn't work right with ion3
+if PLAT_WIN
+ find.use.strip=1
+ replace.use.strip=1
+if PLAT_GTK
+ find.use.strip=0
+ replace.use.strip=0
+
 find.close.on.find=0
-replace.use.strip=1
 strip.button.height=24
 
 # output pane at bottom instead of side; hidden initially
