add print margin

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -39,6 +39,10 @@ output.initial.hide=1
 strip.trailing.spaces=1
 ensure.final.line.end=1
 
+# right (print) margin at col 110
+edge.mode=1
+edge.column=110
+
 # show toolbar, statusbar; hide tab bar if only one tab
 #tabbar.multiline=1 - still can only have 10 tabs
 tabbar.hide.one=1
