open [[ ]] links to local files

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -68,6 +68,9 @@ if PLAT_WINNT
 # remember recently opened files
 save.recent=1
 
+# treat new files as text files
+default.file.ext=.txt
+
 # tab stop = 2, replace tabs with spaces
 tabsize=2
 indent.size=2
