--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -43,8 +43,10 @@ ensure.final.line.end=1
 edge.mode=1
 edge.column=110
 
+# allow up to 25 tabs (default in newer versions)
+buffers=25
 # show toolbar, statusbar; hide tab bar if only one tab
-#tabbar.multiline=1 - still can only have 10 tabs
+tabbar.multiline=1
 tabbar.hide.one=1
 toolbar.visible=1
 statusbar.visible=1
@@ -205,7 +207,8 @@ VHDL|vhd||\
 #\
 #YAML|yaml||
 
-
+# reset imports.exclude
+imports.exclude=abaqus
 # Import language specific properties files for only languages
 #  we expect to use.
 # Documentation says imported files must be in same folder,
