better selection colors

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -45,8 +45,9 @@ edge.column=110
 
 # allow up to 25 tabs (default in newer versions)
 buffers=25
-# show toolbar, statusbar; hide tab bar if only one tab
+# only applies to Windows
 tabbar.multiline=1
+# show toolbar, statusbar; hide tab bar if only one tab
 tabbar.hide.one=1
 toolbar.visible=1
 statusbar.visible=1
@@ -63,9 +64,11 @@ margin.width=0
 # show line numbers
 line.margin.visible=1
 
-# selection was too dark
-if PLAT_WINNT
- selection.alpha=60
+# default selection is black on grey; lets use white on blue instead
+selection.fore=#FFFFFF
+selection.back=#0A246A
+selection.alpha=256
+#selection.alpha=60
 
 # remember recently opened files
 save.recent=1
