--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -13,12 +13,8 @@ if PLAT_GTK
  ext.lua.directory=$(SciteDefaultHome)/scite_lua
 #spawner.extension.path=$(SciteDefaultHome)
 
-# window position
-if PLAT_WIN
- position.left=0
- position.top=0
-position.width=800
-position.height=992
+# window position - just save previous position
+save.position=1
 
 # use strip instead of dialog for find on Windows; strip doesn't work right with ion3
 if PLAT_WIN
@@ -82,6 +78,9 @@ indent.size=2
 use.tabs=0
 indent.auto=0
 
+# wrap long lines by default
+wrap=1
+
 # it appears we must set this explicitly for every
 #  language; * doesn't work; set by default for lua, tex
 # maybe make a script to do this optionally?
@@ -93,9 +92,11 @@ comment.block.at.line.start.bash=1
 comment.block.at.line.start.perl=1
 
 # monospace font; use openmono.lua to set all buffers to monospace on open
+# technology=0 to disable Direct2D on Windows, which seems to prevent use of Dina
 #  note the ! for GTK font
 if PLAT_WIN
  font.monospace=font:Dina,size:8
+ technology=0
 if PLAT_GTK
  font.monospace=font:!Dina,size:8
 
@@ -248,6 +249,8 @@ indent.maintain.$(file.patterns.lua)=0
 block.start.$(file.patterns.lua)=5 function do then else while for
 block.end.$(file.patterns.lua)=5 end else elseif
 
+# seems we must exclude .m (objective-C source) from cpp for matlab to pick it up!
+file.patterns.cpp=*.c;*.cc;*.cpp;*.cxx;*.h;*.hh;*.hpp;*.hxx;*.ipp;*.mm;*.sma
 file.patterns.matlab=*.m
 block.start.$(file.patterns.matlab)=4 function if elseif else while for switch case try catch
 block.end.$(file.patterns.matlab)=4 end else elseif case
