adjust keyboard shortcuts

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -108,6 +108,15 @@ style.*.33=back:#C0C0C0,$(font.monospace)
 text.outline.char=#
 text.outline.ext=*.txt;*.mdwn
 
+# keyboard shortcuts - first three lines are copied from default; custom shortcuts:
+#  disable insert key; use ctrl+space for auto complete
+user.shortcuts=\
+Ctrl+Shift+V|IDM_PASTEANDDOWN|\
+Ctrl+PageUp|IDM_PREVFILE|\
+Ctrl+PageDown|IDM_NEXTFILE|\
+Insert|IDM_DO_NOTHING|\
+Ctrl+Space|IDM_COMPLETEWORD|
+
 # Open file dialog filters - first item (all file) is default
 open.filter=\
 $(all.files)\
