add some whitespace utility fns

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -285,3 +285,7 @@ style.python.12=$(colour.code.comment.box),$(font.code.comment.box),back:#D0F0F0
 #style.tex.0=fore:#7F7F00 or was it #3F3F3F???
 command.compile.$(file.patterns.latex)=pdflatex -file-line-error --interaction=nonstopmode $(FileNameExt)
 command.build.$(file.patterns.latex)=pdflatex -output-format pdf -file-line-error --interaction=nonstopmode $(FileNameExt)
+
+# make requires the use of tabs
+use.tabs.$(file.patterns.make)=1
+tab.indents.$(file.patterns.make)=0
