prevent greying out of preprocessor blocks

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -253,6 +253,9 @@ import syntax/vhdl
 # remove bold highlighting
 style.cpp.5=$(colour.keyword)
 style.cpp.10=$(colour.operator)
+# prevent SciTE from being overly clever with preprocessor
+styling.within.preprocessor=1
+lexer.cpp.track.preprocessor=0
 
 indent.maintain.$(file.patterns.lua)=0
 block.start.$(file.patterns.lua)=5 function do then else while for
