--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -8,13 +8,19 @@
 if PLAT_WIN
  ext.lua.startup.script=$(SciteDefaultHome)\extman.lua
  ext.lua.directory=D:\home\Code\scite\scite_lua
+ # single instance
+ check.if.already.open=1 
 if PLAT_GTK
  ext.lua.startup.script=$(SciteDefaultHome)/extman.lua
  ext.lua.directory=$(SciteDefaultHome)/scite_lua
 #spawner.extension.path=$(SciteDefaultHome)
 
-# window position - just save previous position
+# save and restore window position
 save.position=1
+# save and restore session (open tabs)
+save.session=1
+# remember recently opened files
+save.recent=1
 
 # use strip instead of dialog for find on Windows; strip doesn't work right with ion3
 if PLAT_WIN
@@ -65,9 +71,6 @@ selection.fore=#FFFFFF
 selection.back=#0A246A
 selection.alpha=256
 #selection.alpha=60
-
-# remember recently opened files
-save.recent=1
 
 # treat new files as text files
 default.file.ext=.txt
@@ -262,7 +265,7 @@ block.start.$(file.patterns.lua)=5 function do then else while for
 block.end.$(file.patterns.lua)=5 end else elseif
 
 # seems we must exclude .m (objective-C source) from cpp for matlab to pick it up!
-file.patterns.cpp=*.c;*.cc;*.cpp;*.cxx;*.h;*.hh;*.hpp;*.hxx;*.ipp;*.mm;*.sma
+file.patterns.cpp=*.c;*.cc;*.cpp;*.cxx;*.h;*.hh;*.hpp;*.hxx;*.ipp;*.mm;*.sma;*.glsl
 file.patterns.matlab=*.m
 block.start.$(file.patterns.matlab)=4 function if elseif else while for switch case try catch
 block.end.$(file.patterns.matlab)=4 end else elseif case
