make block selections work better

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -9,7 +9,7 @@ if PLAT_WIN
  ext.lua.startup.script=$(SciteDefaultHome)\extman.lua
  ext.lua.directory=D:\home\Code\scite\scite_lua
  # single instance
- check.if.already.open=1 
+ check.if.already.open=1
 if PLAT_GTK
  ext.lua.startup.script=$(SciteDefaultHome)/extman.lua
  ext.lua.directory=$(SciteDefaultHome)/scite_lua
@@ -71,6 +71,9 @@ selection.fore=#FFFFFF
 selection.back=#0A246A
 selection.alpha=256
 #selection.alpha=60
+
+# allow cursor past end of line (only) when making block selections
+virtual.space=1
 
 # treat new files as text files
 default.file.ext=.txt
