--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -52,6 +52,7 @@ tabbar.multiline=1
 # show toolbar, statusbar; hide tab bar if only one tab
 tabbar.hide.one=1
 toolbar.visible=1
+toolbar.large=1
 statusbar.visible=1
 # show full path in default status bar
 statusbar.text.1=\
@@ -101,10 +102,10 @@ comment.block.at.line.start.perl=1
 # technology=0 to disable Direct2D on Windows, which seems to prevent use of Dina
 #  note the ! for GTK font
 if PLAT_WIN
- font.monospace=font:Dina,size:8
+ font.monospace=font:Menlo,size:9
  technology=0
 if PLAT_GTK
- font.monospace=font:!Dina,size:8
+ font.monospace=font:monospace,size:8
 
 # use monospace font for line numbers margin
 # line number font affects vertical line spacing, even when line numbers are hidden
