MRU tab switching

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -47,6 +47,8 @@ edge.column=110
 
 # allow up to 25 tabs (default in newer versions)
 buffers=25
+# Ctrl-Tab cycles through most recently used buffers
+buffers.zorder.switching=1
 # only applies to Windows
 tabbar.multiline=1
 # show toolbar, statusbar; hide tab bar if only one tab
