fix paste primary bug; use Alt for block selection

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -75,6 +75,9 @@ selection.back=#0A246A
 selection.alpha=256
 #selection.alpha=60
 
+# use Alt key for block selection on GTK (to match Windows)
+rectangular.selection.modifier=4
+
 # allow cursor past end of line (only) when making block selections
 virtual.space=1
 
