Ctrl+/ for block comment; JSON syntax highlighting

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -127,7 +127,8 @@ Ctrl+Shift+V|IDM_PASTEANDDOWN|\
 Ctrl+PageUp|IDM_PREVFILE|\
 Ctrl+PageDown|IDM_NEXTFILE|\
 Insert|IDM_DO_NOTHING|\
-Ctrl+Space|IDM_COMPLETEWORD|
+Ctrl+Space|IDM_COMPLETEWORD|\
+Ctrl+/|IDM_BLOCK_COMMENT|
 
 # Open file dialog filters - first item (all file) is default
 open.filter=\
@@ -193,6 +194,7 @@ H&ypertext|html||\
 #&InnoSetup|iss||\
 &Java|java||\
 Java&Script|js||\
+JSON|json||\
 #&Kix|kix||\
 TeX|tex||\
 Lisp|lisp||\
@@ -244,6 +246,7 @@ import syntax/cpp
 import syntax/css
 import syntax/fortran
 import syntax/html
+import syntax/json
 import syntax/lisp
 import syntax/lua
 import syntax/matlab
