enabled incremental search

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -30,7 +30,9 @@ if PLAT_GTK
  find.use.strip=0
  replace.use.strip=0
 
-find.close.on.find=0
+find.strip.incremental=2
+find.indicator.incremental=style:straightbox,colour:#FFEF0B,under,fillalpha:144,outlinealpha:144
+find.close.on.find=1
 strip.button.height=24
 
 # output pane at bottom instead of side; hidden initially
