--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -105,6 +105,9 @@ comment.block.at.line.start.matlab=1
 comment.block.at.line.start.bash=1
 comment.block.at.line.start.perl=1
 
+# UTF-8
+code.page=65001
+
 # monospace font; use openmono.lua to set all buffers to monospace on open
 # technology=0 to disable Direct2D on Windows, which seems to prevent use of Dina
 #  note the ! for GTK font
