always use LF line endings

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -95,6 +95,10 @@ indent.auto=0
 # wrap long lines by default
 wrap=1
 
+# use LF for blank files; use existing EOL format for others
+eol.mode=LF
+eol.auto=1
+
 # it appears we must set this explicitly for every
 #  language; * doesn't work; set by default for lua, tex
 # maybe make a script to do this optionally?
