enable YAML syntax support

--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -248,9 +248,8 @@ S&QL|sql||\
 VBScr&ipt|vbs||\
 Verilog|v||\
 VHDL|vhd||\
-&XML|xml||
-#\
-#YAML|yaml||
+&XML|xml||\
+YAML|yaml||
 
 # reset imports.exclude
 imports.exclude=abaqus
@@ -280,6 +279,7 @@ import syntax/tex
 import syntax/vb
 import syntax/verilog
 import syntax/vhdl
+import syntax/yaml
 
 ## custom syntax config
 
