--- a/SciTECustom.properties
+++ b/SciTECustom.properties
@@ -25,13 +25,9 @@ save.session=1
 # remember recently opened files
 save.recent=1
 
-# use strip instead of dialog for find on Windows; strip doesn't work right with ion3
-if PLAT_WIN
- find.use.strip=1
- replace.use.strip=1
-if PLAT_GTK
- find.use.strip=0
- replace.use.strip=0
+# use strip instead of dialog for find
+find.use.strip=1
+replace.use.strip=1
 
 find.strip.incremental=2
 find.indicator.incremental=style:straightbox,colour:#FFEF0B,under,fillalpha:144,outlinealpha:144
@@ -128,7 +124,7 @@ if PLAT_WIN
  font.monospace=font:Meslo LG XS,size:9
  technology=0
 if PLAT_GTK
- font.monospace=font:monospace,size:8
+ font.monospace=font:monospace,size:9
 
 # use monospace font for line numbers margin
 # line number font affects vertical line spacing, even when line numbers are hidden
